--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.1",
+    "popper.js": "^1.14.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-time": "^4.3.0",
     "util.promisify": "^1.0.0"
   },
   "homepage": "http://inifahmi3.github.io/learn-react",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & npm run scss",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "dev": "concurrently --kill-others \"npm start\" \"npm run scss\"",
+    "scss": "scss --watch src/assets/scss/app.scss:public/assets/css/app.css"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "gh-pages": "^1.0.9"
   }
 }
